PALAYAIN NYO N AQ PLS

--- a/pages/hondaCivicSedan/index.html
+++ b/pages/hondaCivicSedan/index.html
@@ -56,16 +56,15 @@
   </nav>
 </div>
 
-<!--HONDA ODYSSEY PRODUCT-->
+<!--HONDA CIVIC SEDAN PRODUCT-->
 <section class="Our Models"></section>
   <div class="text-center container py-5">
-    <h2 class="mt-4 mb-5"><strong>Honda Civic Sedan</strong></h2>
+    <h1 class="mt-4 mb-5"><strong>HONDA CIVIC SEDAN 2025</strong></h1>
     <div class="row">
-          <div class="col-lg-4 col-md-12 mb-4">
             <class="text-reset text-decoration-none">
             <div class="card text-black">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                class="card-img-top" alt="Apple Computer" />
+              <img src="./assets/img/hondaCivicSedanShowcase.png"
+                class="card-img-top" alt="hondaOdyssey"/>
               <div class="card-body">
               <div class="d-flex justify-content-between total font-weight-bold mt-4">
                 </div>
@@ -74,6 +73,34 @@
           </class=>
       </div>
     </section>
+
+<!--HONDA ODYSSEY INFO-->
+<section class="info">
+  <div class="op1">
+    <h2>Accelerate Greatness</h2>
+  </div>
+  <div class="op2">
+    <p>The All-New Civic has enhanced technology designed for your safety on the road keeping you one step ahead of the game. It's styled to have a premium look and built for high-class performance, making you stand out amongst the crowd.</p>
+  </div>
+  <div class="ext1">
+    <h2>Exterior</h2>
+  </div>
+  <div class="ext2">
+    <p>The All-New Civic has enhanced technology designed for your safety on the road keeping you one step ahead of the game. It's styled to have a premium look and built for high-class performance, making you stand out amongst the crowd.</p>
+  </div>
+  <div class="int1">
+    <h2>Interior</h2>
+  </div>
+  <div class="int2">
+    <p>We made sure that the moment you sit in the All-New Honda Civic, you'll experience a premium design and a smarter intuitive interface making your driving experience like no other.</p>
+  </div>
+  <div class="saf1">
+    <h2>Safety</h2>
+  </div>
+  <div class="saf2" >
+    <p>The All-New Civic has the improved Honda SENSING - a collection of driver assistance and collision avoidance technologies to keep you safe and make driving more fun.</p>
+  </div>
+</section>
 
   <!--OTHER MODELS-->
   <section class="Our Models">
@@ -86,8 +113,8 @@
                 <div class="col-lg-4 col-md-12 mb-4">
                   <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
                   <div class="card text-black">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                      class="card-img-top" alt="Apple Computer" />
+                    <img src="./assets/img/hondaOdysseyShowcase.png"
+                      class="card-img-top" alt="hondaOdyssey" />
                     <div class="card-body">
                       <div class="text-center">
                         <h5 class="card-title">Honda Odyssey</h5>
@@ -102,12 +129,12 @@
                 <div class="col-lg-4 col-md-12 mb-4">
                   <a href="../hondaAccordHybrid/index.html" class="text-reset text-decoration-none">
                   <div class="card text-black">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                      class="card-img-top" alt="Apple Computer" />
+                    <img src="./assets/img/hondaAccordHybridShowcase.png"
+                      class="card-img-top" alt="hondaAccordHybrid" />
                     <div class="card-body">
                       <div class="text-center">
                         <h5 class="card-title">Honda Accord Hybrid</h5>
-                        <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                        <p class="text-muted mb-4">Honda Accord Hybrid 2025</p>
                       </div>
                     <div class="d-flex justify-content-between total font-weight-bold mt-4">
                       </div>
