--- a/pages/hondaOdyssey/index.html
+++ b/pages/hondaOdyssey/index.html
@@ -59,13 +59,12 @@
 <!--HONDA ODYSSEY PRODUCT-->
 <section class="Our Models"></section>
   <div class="text-center container py-5">
-    <h2 class="mt-4 mb-5"><strong>Honda Odyssey</strong></h2>
+    <h1 class="mt-4 mb-5"><strong>HONDA ODYSSEY 2025</strong></h1>
     <div class="row">
-          <div class="col-lg-4 col-md-12 mb-4">
             <class="text-reset text-decoration-none">
             <div class="card text-black">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                class="card-img-top" alt="Apple Computer" />
+              <img src="./assets/img/hondaOdysseyShowcase.png"
+                class="card-img-top" alt="hondaOdyssey"/>
               <div class="card-body">
               <div class="d-flex justify-content-between total font-weight-bold mt-4">
                 </div>
@@ -74,6 +73,34 @@
           </class=>
       </div>
     </section>
+
+<!--HONDA ODYSSEY INFO-->
+<section class="info">
+  <div class="op1">
+    <h2>An Odyssey to Luxury</h2>
+  </div>
+  <div class="op2">
+    <p>The Odyssey: Honda's latest interpretation of luxurious motoring. An executive carrier that befits your stature. A vehicle that reflects your sophistication and gives you the ride you deserve. Your Odyssey to luxury begins here.</p>
+  </div>
+  <div class="ext1">
+    <h2>Exterior</h2>
+  </div>
+  <div class="ext2">
+    <p>Welcome to the new face of Luxury. The Honda Odyssey has the looks that is worthy of everyone's attention. With a new fascia and distinctive touches. it is a vessel that projects absolute class.</p>
+  </div>
+  <div class="int1">
+    <h2>Interior</h2>
+  </div>
+  <div class="int2">
+    <p>Prestige & Luxury Within. Be surrounded by luxurious features that make your journey more comfortable. more prestigious.</p>
+  </div>
+  <div class="saf1">
+    <h2>Safety</h2>
+  </div>
+  <div class="saf2" >
+    <p>The Luxury of Safety. The Honda Odyssey is designed to be safe at every turn. It has all the right features to keep everyone inside safe and sound.</p>
+  </div>
+</section>
 
   <!--OTHER MODELS-->
   <section class="Our Models">
@@ -86,12 +113,12 @@
                 <div class="col-lg-4 col-md-12 mb-4">
                   <a href="../hondaCivicSedan/" class="text-reset text-decoration-none">
                   <div class="card text-black">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                      class="card-img-top" alt="Apple Computer" />
+                    <img src="./assets/img/hondaCivicSedanShowcase.png"
+                      class="card-img-top" alt="Honda Civic Sedan" />
                     <div class="card-body">
                       <div class="text-center">
                         <h5 class="card-title">Honda Civic Sedan</h5>
-                        <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                        <p class="text-muted mb-4">Honda Civic Sedan 2025</p>
                       </div>
                     <div class="d-flex justify-content-between total font-weight-bold mt-4">
                       </div>
@@ -102,12 +129,12 @@
                 <div class="col-lg-4 col-md-12 mb-4">
                   <a href="../hondaAccordHybrid/index.html" class="text-reset text-decoration-none">
                   <div class="card text-black">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                      class="card-img-top" alt="Apple Computer" />
+                    <img src="./assets/img/hondaAccordHybridShowcase.png"
+                      class="card-img-top" alt="hondaAccordHybrid" />
                     <div class="card-body">
                       <div class="text-center">
                         <h5 class="card-title">Honda Accord Hybrid</h5>
-                        <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                        <p class="text-muted mb-4">Honda Accord Hybrid 2025</p>
                       </div>
                     <div class="d-flex justify-content-between total font-weight-bold mt-4">
                       </div>
