--- a/index.html
+++ b/index.html
@@ -59,17 +59,22 @@
 <!--HERO MAIN-->
 
   <div class="newhonda">
-    <h3>THE NEW</h3>
+    <div class="new">
+      <h3>THE NEW</h3>
+    </div>
     <h1>HONDA ODYSSEY</h1>
   </div>
   <div class="hondaOdysseySide">
     <img src="./assets/img/hondaOdysseySide.png" alt="hondaOdyssey" width="1500" height="900">
   </div>
-<h3>Modern Design meets Family Fun</h3>
-<a data-mdb-ripple-init class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
+  <div class="subhead">
+    <h3>Modern Design meets Family Fun</h3>
+  </div>
 
-<!--BUTTON-->
-    <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-primary">See Offers</button></a>
+  <!--BUTTON-->
+  <div class="button">
+    <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-info btn-rounded" data-mdb-ripple-init>See Offers</button></a>
+  </div>
 
 <!--FOOTER-->
 <footer class="bg-body-tertiary text-center">
