--- a/pages/hondaAccordHybrid/index.html
+++ b/pages/hondaAccordHybrid/index.html
@@ -57,16 +57,15 @@
 </div>
 
 
-<!--HONDA ODYSSEY PRODUCT-->
+<!--HONDA ACCORD HYBRID PRODUCT-->
 <section class="Our Models"></section>
   <div class="text-center container py-5">
-    <h2 class="mt-4 mb-5"><strong>Honda Accord Hybrid</strong></h2>
+    <h1 class="mt-4 mb-5"><strong>HONDA ACCORD HYBRID 2025</strong></h1>
     <div class="row">
-          <div class="col-lg-4 col-md-12 mb-4">
             <class="text-reset text-decoration-none">
             <div class="card text-black">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                class="card-img-top" alt="Apple Computer" />
+              <img src="./assets/img/hondaAccordHybridShowcase.png"
+                class="card-img-top" alt="hondaOdyssey"/>
               <div class="card-body">
               <div class="d-flex justify-content-between total font-weight-bold mt-4">
                 </div>
@@ -75,6 +74,34 @@
           </class=>
       </div>
     </section>
+
+<!--HONDA ODYSSEY INFO-->
+<section class="info">
+  <div class="op1">
+    <h2>Step Up to the Accord Hybrid</h2>
+  </div>
+  <div class="op2">
+    <p>With 204-horsepower,* an extra-wide 12.3-inch touch-screen, and wireless Apple CarPlay®* compatibility, hybrid trims give you premium technology, while receiving a 51 city/44 highway mpg rating</p>
+  </div>
+  <div class="ext1">
+    <h2>204-hp Hybrid Powertrain</h2>
+  </div>
+  <div class="ext2">
+    <p>From the Moment you step on the pedal, you'll feel the smooth, direct rush of instant torque, courtesy of the 204-horsepower hybrid's powerful electric motor.</p>
+  </div>
+  <div class="int1">
+    <h2>EV Mode</h2>
+  </div>
+  <div class="int2">
+    <p>Thanks to its powerful traction motor and high-voltage batter, the hybrid powertrain can operate under certain conditions in electric-only EV mode.</p>
+  </div>
+  <div class="saf1">
+    <h2>4-Mode Drive System</h2>
+  </div>
+  <div class="saf2" >
+    <p>Along with Sport mode for more responsive performance and ECON mode for optimal efficiency, hybrid trims include an Individual mode that allows you to customize steering, gauges, and other settings to your liking.</p>
+  </div>
+</section>
 
 
     <!--OTHER MODELS-->
@@ -88,7 +115,7 @@
                   <div class="col-lg-4 col-md-12 mb-4">
                     <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
                     <div class="card text-black">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                      <img src="./assets/img/hondaOdysseyShowcase.png"
                         class="card-img-top" alt="Apple Computer" />
                       <div class="card-body">
                         <div class="text-center">
@@ -104,12 +131,12 @@
                   <div class="col-lg-4 col-md-12 mb-4">
                     <a href="../hondaCivicSedan/index.html" class="text-reset text-decoration-none">
                     <div class="card text-black">
-                      <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
+                      <img src="./assets/img/hondaCivicSedanShowcase.png"
                         class="card-img-top" alt="Apple Computer" />
                       <div class="card-body">
                         <div class="text-center">
                           <h5 class="card-title">Honda Civic Sedan</h5>
-                          <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                          <p class="text-muted mb-4">Honda Civic Sedan 2025</p>
                         </div>
                       <div class="d-flex justify-content-between total font-weight-bold mt-4">
                         </div>
