--- a/pages/vehicles/index.html
+++ b/pages/vehicles/index.html
@@ -68,8 +68,8 @@
               <div class="col-lg-4 col-md-12 mb-4">
                 <a href="../hondaOdyssey/index.html" class="text-reset text-decoration-none">
                 <div class="card text-black">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                    class="card-img-top" alt="Apple Computer" />
+                  <img src="./assets/img/hondaOdysseyShowcase.png"
+                    class="card-img-top" alt="hondaOdyssey" />
                   <div class="card-body">
                     <div class="text-center">
                       <h5 class="card-title">Honda Odyssey</h5>
@@ -84,12 +84,12 @@
               <div class="col-lg-4 col-md-12 mb-4">
                 <a href="../hondaCivicSedan/" class="text-reset text-decoration-none">
                 <div class="card text-black">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                    class="card-img-top" alt="Apple Computer" />
+                  <img src="./assets/img/hondaCivicSedanShowcase.png"
+                    class="card-img-top" alt="hondaCivicSedan" />
                   <div class="card-body">
                     <div class="text-center">
                       <h5 class="card-title">Honda Civic Sedan</h5>
-                      <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                      <p class="text-muted mb-4">Honda Civic Sedan 2025</p>
                     </div>
                   <div class="d-flex justify-content-between total font-weight-bold mt-4">
                     </div>
@@ -100,12 +100,12 @@
               <div class="col-lg-4 col-md-12 mb-4">
                 <a href="../hondaAccordHybrid/index.html" class="text-reset text-decoration-none">
                 <div class="card text-black">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/E-commerce/Products/3.webp"
-                    class="card-img-top" alt="Apple Computer" />
+                  <img src="./assets/img/hondaAccordHybridShowcase.png"
+                    class="card-img-top" alt="hondaAccordHybrid" />
                   <div class="card-body">
                     <div class="text-center">
                       <h5 class="card-title">Honda Accord Hybrid</h5>
-                      <p class="text-muted mb-4">Honda Odyssey 2025</p>
+                      <p class="text-muted mb-4">Honda Accord Hybrid 2025</p>
                     </div>
                   <div class="d-flex justify-content-between total font-weight-bold mt-4">
                     </div>
