--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Honda</title>
 </head>
-<body>
+<body class="bghero">
   
 <!--NAVBAR-->
  <div class="navigation">
@@ -57,38 +57,45 @@
 </div>
 
 <!--HERO MAIN-->
-
-  <div class="newhonda">
-    <div class="new">
-      <h3>THE NEW</h3>
+<section class="heromain">
+<div class="p-5 text-center bg-image rounded-3">
+  <div class="mask" style="background-color: rgba(134, 134, 134, 0.6);">
+    <div class="d-flex justify-content-center align-items-center h-100">
+      <div class="text-white">
+        <div class="head1">
+          <h1 class="mb-3">The New</h1>
+        </div>
+        <div class="head2">
+          <h1 class="mb-3">HONDA ODYSSEY 2025</h1>
+        </div>
+        <div class="subhead">
+          <h4 class="mb-3">Modern Design meets Family Fun</h4>
+        </div>
+        <div class="button">
+          <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-info btn-rounded" data-mdb-ripple-init>See Offers</button></a>
+        </div>
+      </div>
     </div>
-    <h1>HONDA ODYSSEY</h1>
   </div>
-  <div class="hondaOdysseySide">
-    <img src="./assets/img/hondaOdysseySide.png" alt="hondaOdyssey" width="1500" height="900">
-  </div>
-  <div class="subhead">
-    <h3>Modern Design meets Family Fun</h3>
-  </div>
-
-  <!--BUTTON-->
-  <div class="button">
-    <a href="./pages/vehicles/index.html"><button type="button" class="btn btn-info btn-rounded" data-mdb-ripple-init>See Offers</button></a>
-  </div>
+</div>
+</section>
 
 <!--FOOTER-->
-<footer class="bg-body-tertiary text-center">
-  <!-- Grid container -->
-  <div class="container p-4"></div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2024 Copyright:
-    <a class="text-body" href="../../index.html">Honda.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
+<section class="footerhero">
+  <footer class="bg-body-tertiary text-center">
+    <!-- Grid container -->
+    <div class="container p-4"></div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2024 Copyright:
+      <a class="text-body" href="../../index.html">Honda.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  
+</section>
 
 </body>
 </html>
