--- a/pages/hondaAccordHybrid/index.html
+++ b/pages/hondaAccordHybrid/index.html
@@ -162,6 +162,6 @@
     <a class="text-body" href="../../index.html">Honda.com</a>
   </div>
   <!-- Copyright -->
-</footer>ter>
+</footer>
 </body>
 </html>
